--- a/crud/frontend/src/components/templates/Nav.css
+++ b/crud/frontend/src/components/templates/Nav.css
@@ -20,3 +20,20 @@ aside.menu-area {
       100%
     );
 }
+
+@media(max-width: 768px) {
+  .menu {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .menu a {
+    display: inline;
+    padding: 10px;
+    margin: 0px;
+  }
+  .menu {
+    height: 100%;
+    justify-content: space-around;
+  }
+}
